<resources>
    <string name="app_name">partyCatcher</string>

    <string name="hello_world">Hello world!</string>
    <string name="zhops">Zhops</string>
    <string name="profile">Профиль</string>
    <string name="parties_nearby">Вечеринки поблизости</string>
    <string name="new_party">Новая вечеринка</string>
    <string name="list">Список</string>
    <string name="friends_parties">Вечеринки друзей</string>
    <string name="action_settings">Settings</string>
    <string name="party_name">Название вечеринки</string>
    <string name="party_theme">Тематика</string>
    <string name="party_dresscode">Дресс-код</string>
    <string name="party_guests_count">Количество гостей</string>
    <string name="party_species">Дополнительные особенности</string>
    <string name="species_example">Пример:"Только безалкогольные напитки"</string>
    <string name="party_place">Местро проведения</string>
    <string name="my_place">Я на месте</string>
    <string name="party_icon">Значок на карте</string>
    <string name="submit_party">Готово</string>
</resources>
