<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_party"
        android:id="@+id/newparty_label"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="40dp"
        android:textStyle="bold|italic"
        android:textIsSelectable="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_party_name"
        android:width="200dp"
        android:layout_below="@+id/new_party_name_label"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/new_party_name_label"
        android:layout_below="@+id/newparty_label"
        android:layout_alignParentStart="true"
        android:text="@string/party_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/party_theme"
        android:id="@+id/new_party_theme_label"
        android:layout_below="@+id/new_party_name"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_party_theme"
        android:layout_below="@+id/new_party_theme_label"
        android:layout_alignParentStart="true"
        android:width="200dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/party_dresscode"
        android:id="@+id/new_party_dresscode_label"
        android:layout_below="@+id/new_party_theme"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_party_dresscode"
        android:layout_below="@+id/new_party_dresscode_label"
        android:layout_alignParentStart="true"
        android:width="200dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/party_guests_count"
        android:id="@+id/new_party_guests_label"
        android:layout_below="@+id/new_party_dresscode"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/new_party_guests"
        android:layout_below="@+id/new_party_guests_label"
        android:layout_alignParentStart="true"
        android:width="200dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/party_species"
        android:id="@+id/textView"
        android:layout_below="@+id/new_party_guests"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:height="200dp"
        android:minLines="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/party_place"
        android:id="@+id/new_party_place_label"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:width="200dp"
        android:layout_below="@+id/new_party_place_label"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_place"
        android:id="@+id/place_button"
        android:layout_alignTop="@+id/new_party_place_label"
        android:layout_toEndOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/party_icon"
        android:id="@+id/new_party_icon_label"
        android:layout_below="@+id/newparty_label"
        android:layout_alignEnd="@+id/place_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/new_party_icon_list"
        android:layout_below="@+id/new_party_icon_label"
        android:layout_alignEnd="@+id/place_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_party"
        android:id="@+id/new_party_submit"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true" />

</RelativeLayout>